--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,59 @@
+@font-face {
+    font-family: NorseBold;
+    src: url(fonts/Norse-Bold.otf)
+}
+body{
+    display: flex;
+    justify-content: center;
+    box-sizing: border-box;
+    background: repeating-linear-gradient(
+    45deg,
+    #36454F 0px,
+    #36454F 2px,
+    #7393B3 2px,
+    #7393B3 4px
+  );
+  height: 100vh;
+}
 
+#form-container{
+    margin-top: 2rem;
+    width: max(80%, 600px);
+    height: max(90%, 600px);
+    border: 1px solid darkslategray;
+    border-radius: 2rem;
+    box-shadow: 0 0 8px black;
+    display: flex;
+    flex-direction: row;
+}
+
+#background{
+    background-image: url(img/window.jpg);
+    background-size: cover;
+    border-radius: 2rem 0 0 2rem;
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    justify-content: center;
+}
+#form{
+    display: flex;
+    flex: 2;
+    background-color: white;
+    border-radius: 0 2rem 2rem 0;
+}
+
+#logo{
+    font-family: NorseBold;
+    font-size: 6rem;
+    display: flex;
+    height: 10rem;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    justify-content: center;
+    align-items: center;
+}
+
+div>img{
+    max-height: 6rem;
+}
