--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,7 @@ body{
     flex: 2;
     background-color: white;
     border-radius: 0 2rem 2rem 0;
+    flex-direction: column;
 }
 
 #logo{
@@ -58,9 +59,6 @@ div>img{
     max-height: 7rem;
 }
 
-#form{
-    padding: 0 8rem 0 2rem;
-}
 
 input,label {
     display: block;
@@ -69,8 +67,30 @@ input,label {
 .names, .emailphone, .passwordcontain{
     display: flex;
     gap: 2rem;
+    box-sizing: border-box;
+    margin-left: 2rem;
 }
 
-input{
-    size: 3rem;
+input:invalid{
+    border: 5px solid red;
 }
+
+input:valid{
+    border: 2px solid green;
+}
+
+input:current{
+    border: 3px solid blue;
+    box-shadow: 0 0 2px blue;
+}
+
+.formbox{
+    box-shadow: 0 8px 6px -6px black;
+    margin-bottom: 2rem;
+    padding-bottom: 2rem;
+}
+
+#submit, form>div>h2 {
+    margin-left: 2rem;
+}
+
